Add CRUD functionality for Portfolio model

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,11 +1,14 @@
 <h1>Portfolios</h1>
+<%= link_to 'New', new_portfolio_path %>
 <ul>
   <% @portfolios.each do |p| %>
     <li>
       <h3><%= p.title %></h3>
       <span><%= p.subtitle %></span><br>
       <p><%= p.body %></p>
-      <%= image_tag p.main_image %>
+      <%= image_tag p.main_image unless p.main_image.nil? %>
+      <%= link_to 'Edit', edit_portfolio_path(p) %>
+      <%= link_to 'Show', portfolio_path(p) %>
     </li>
   <% end %>
 </ul>
