--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>DevcampPortfolio</title>
+    <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,15 +9,11 @@
   </head>
 
   <body>
+    <%= render 'share/nav', location_class: 'top-nav' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if current_user.is_a?(User) %>
-      <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-    <% else  %>
-      <%= link_to 'Login', new_user_session_path %>
-      <%= link_to 'Register', new_user_registration_path %>
-    <% end  %>
+    <%= login_helper %>
 
     <%= yield %>
 
